--- a/modules/frontend/public/main.html
+++ b/modules/frontend/public/main.html
@@ -2,5 +2,10 @@
     <p align="center">
         <font size="6px" face="Arial">Hello {{page}}</font><br><b>##&en We are very english ##&hu Magyaros a dolog ##</b>
     </p>
+
+    <br> Current session is
+    <pre>
+{{session | json}} 
+</pre>
 </div>
 <br>
