--- a/modules/session/public/session.html
+++ b/modules/session/public/session.html
@@ -13,5 +13,5 @@
         <label for="comment">Test:</label>
         <textarea class="form-control" rows="5" id="comment" ng-model="session.data.teststring"></textarea>
     </div>
-    <button type="button" class="btn btn-primary" ng-click="action()">Send</button>
+    <button type="button" class="btn btn-primary" ng-click="session_save()">Save</button>
 </div>
