--- a/modules/passport/public/login-template.html
+++ b/modules/passport/public/login-template.html
@@ -11,7 +11,7 @@
 
             <div ng-show="reg_b || log_b" class="input-group" title="##&en Use the password for the local login method. ##&hu A bejelentkezéshez tartozó jelszó megadásával léphet be. ##">
                 <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                <input ng-model="password" type="password" class="form-control" id="passTxt" placeholder="##&en next ##&hu tovább ##" />
+                <input ng-model="password" type="password" class="form-control" id="passTxt" placeholder="##&en password ##&hu jelszó ##" />
                 <span class="input-group-btn"><button class="btn btn-default" type="button" ng-disabled="!login_check()" ng-click="login()"><i class="fa fa-fw fa-arrow-right"></i> ##&en next ##&hu tovább ##</button></span>
             </div>
 
@@ -37,7 +37,7 @@
 
         </div>
         <div class="panel-footer">
-            ##&en By loggin in, you accept our <a href="/{{host}}-privacypolicy.pdf">privacy policy</a> and our <a href="/{{host}}-termsofservice.pdf">terms of service</a> ## ##&hu Bejelentkezésável elfogadja az <a href="/{{host}}-adatkezeles.pdf">adatkezelési nyilatkozatunkat</a>            és az <a href="/{{host}}-aszf.pdf">aszf</a> feltételeinket</a> ##
+            ##&en By loggin in, you accept our <a href="/{{host}}-privacypolicy.pdf">privacy policy</a> and our <a href="/{{host}}-termsofservice.pdf">terms of service</a> ## ##&hu Bejelentkezésável elfogadja az <a href="/{{host}}-adatkezeles.pdf">adatkezelési nyilatkozatunkat</a>            és az <a href="/{{host}}-aszf.pdf">aszf</a> feltételeinket ##
         </div>
     </div>
 </div>
