--- a/modules/profile/public/profile.html
+++ b/modules/profile/public/profile.html
@@ -1,4 +1,7 @@
-<div class="container page-content">
+<div ng-if="!session.passport.user">
+    <div boiler-login></div>
+</div>
+<div ng-if="session.passport.user" class="container page-content">
     <div ng-controller="profile">
         <div smart-form definition="forms" response="$root.session.user" onsave="save"></div>
     </div>
