--- a/modules/passport/public/login-template.html
+++ b/modules/passport/public/login-template.html
@@ -1,7 +1,8 @@
 <div class="container" style="max-width:600px;margin:auto;">
 
     <div class="text-center panel panel-default">
-        <div class="panel-heading">{{login_message}}</div>
+        <div class="panel-heading">{{login_message}}
+        </div>
         <div class="panel-body">
             <div ng-show="!reg_b && !log_b" class="input-group" title="##&en A local login method is to use your email adress. ##&hu A helyi bejelentkezéshez használja e-mail címét. ##">
                 <span class="input-group-addon"><i class="fa fa-fw fa-envelope"></i></span>
