--- a/modules/admin/public/admin-navigation.html
+++ b/modules/admin/public/admin-navigation.html
@@ -2,3 +2,4 @@
 <a href="" ng-click="go2('admin-settings')" class="btn btn-primary">##&en Settings ##&hu Beállítások ##</a>
 <a href="" ng-click="go2('admin-users')" class="btn btn-primary">##&en Users ##&hu Userek ##</a>
 <a href="" ng-click="go2('admin-promo')" class="btn btn-primary">Promo</a>
+<a href="" ng-click="go2('admin-logs')" class="btn btn-primary">LOG</a>
