--- a/modules/passport/public/login-template.html
+++ b/modules/passport/public/login-template.html
@@ -38,7 +38,7 @@
 
         </div>
         <div class="panel-footer">
-            ##&en By loggin in, you accept our <a href="/{{host}}-privacypolicy.pdf">privacy policy</a> and our <a href="/{{host}}-termsofservice.pdf">terms of service</a> ## ##&hu Bejelentkezésável elfogadja az <a href="/{{host}}-adatkezeles.pdf">adatkezelési nyilatkozatunkat</a>            és az <a href="/{{host}}-aszf.pdf">aszf</a> feltételeinket ##
+            ##&en By loggin in, you accept our <a href="/{{host}}-privacypolicy.pdf">privacy policy</a> and our <a href="/{{host}}-termsofservice.pdf">terms of service</a> ## ##&hu Bejelentkezésável elfogadja <a href="/{{host}}-adatkezeles.pdf">adatkezelési nyilatkozatunkat</a>            és <a href="/{{host}}-aszf.pdf">Ászf.</a> feltételeinket ##
         </div>
     </div>
 </div>
