--- a/@vue-modules/app/vue/en.html
+++ b/@vue-modules/app/vue/en.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>English ßoilerplate App</title>
   </head>
   <body>
